test/expressions/diten/uintOctalOverflow.good
uintOctalOverflow.chpl:1: error: error building numeric literal: integer literal overflow: '0o2000000000000000000000' is too big for type 'uint64'
