test/expressions/diten/uintOctalOverflow.chpl
var o = 0o2000000000000000000000;
writeln(o);
